--- a/webapp/composer.json
+++ b/webapp/composer.json
@@ -1,18 +1,14 @@
 {
-	"name": "bcosca/fatfree",
-	"description": "A powerful yet easy-to-use PHP micro-framework designed to help you build dynamic and robust Web applications - fast!",
-	"homepage": "http://fatfreeframework.com/",
+	"name": "ChrisBAshton/major-project",
+	"description": "Online Dispute Resolution for Maritime Collisions",
+	"homepage": "http://ashton.codes",
 	"license": "GPL-3.0",
 	"require": {
-		"php": ">=5.3.6"
+		"php":            ">=5.3.6",
+		"bcosca/fatfree": "3.4.0",
+		"symfony/yaml":   "2.6.4"
 	},
-	"repositories": [
-		{
-			"type": "vcs",
-			"url": "https://github.com/bcosca/fatfree"
-		}
-	],
-	"autoload": {
-		"files": ["lib/base.php"]
-	}
+    "config": {
+        "vendor-dir": "lib"
+    }
 }
