--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ script:
   - sqlite3 data/production.db < data/db.sql 
   - sqlite3 data/test.db < data/db.sql 
   # populate the test database
-  - php test/seed.php
+  - php data/fixtures/seed.php
   # run our tests
   - ./vendor/phpunit/phpunit/phpunit test/unit_tests/
