started abstracting out the account details logic

--- a/data/fixtures/users.yml
+++ b/data/fixtures/users.yml
@@ -1,7 +1,7 @@
 users:
-    - email:    cba1@aber.ac.uk
-      password: test
-    - email:    cba2@aber.ac.uk
-      password: test2
+    - email:    test1@test.com
+      password: test1pass
+    - email:    test2@test.com
+      password: test2pass
     - email:    chris@ashton.codes
       password: password
