--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ php:
   - 5.4
 install:
   - composer install
+  - gem install bundler
+  - bundle install
 script:
   # create our databases
   - sqlite3 data/production.db < data/db.sql
