--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   # start a web server. See http://knpuniversity.com/screencast/question-answer-day/travis-ci
   - sudo apt-get update > /dev/null
   - sudo apt-get install -y --force-yes apache2 libapache2-mod-php5 php5-curl php5-mysql php5-intl
-  - sudo sed -i -e "s,/var/www,$(pwd)/web,g" /etc/apache2/sites-available/default
+  - sudo sed -i -e "s,/var/www,$(pwd)/webapp,g" /etc/apache2/sites-available/default
   - sudo /etc/init.d/apache2 restart
 script:
   # create our databases
