--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,9 @@ install:
   - gem install bundler
   - bundle install
 before_script:
-  # start a web server. See http://knpuniversity.com/screencast/question-answer-day/travis-ci
-  - sudo apt-get update > /dev/null
-  - sudo apt-get install -y --force-yes apache2 libapache2-mod-php5 php5-curl php5-mysql php5-intl
-  - sudo sed -i -e "s,/var/www,$(pwd)/webapp,g" /etc/apache2/sites-available/default
-  - sudo /etc/init.d/apache2 restart
+  # start a web server. See http://robbiemackay.com/2013/05/03/automating-behat-and-mink-tests-with-travis-ci/
+  - php -S 127.0.0.1:8000 -t webapp &
+  - sleep 3
 script:
   # create our databases
   - sqlite3 data/production.db < data/db.sql
