--- a/data/fixtures/fixture_data.yml
+++ b/data/fixtures/fixture_data.yml
@@ -1,42 +1,61 @@
 organisations:
-    - account_details:
+  - account_details:
         email:    law_firm_email
         password: test
-      details:
+    details:
         type:     law_firm
         name:     Webdapper Ltd
-      individuals:
-        - account_details:
+    individuals:
+      - account_details:
             email:    agent_email
             password: test
-          details:
+        details:
             type:     agent
             forename: Chris
             surname:  Ashton
-        - account_details:
+      - account_details:
             email:    another_agent_email
             password: secret
-          details:
+        details:
             type:     agent
             forename: John
             surname:  Smith
-    - account_details:
+  - account_details:
+        email:    another_law_firm_email
+        password: test
+    details:
+        type:     law_firm
+        name:     Maritime Collision Specialists Inc
+    individuals:
+      - account_details:
+            email:    agent_b
+            password: test
+        details:
+            type:     agent
+            forename: James
+            surname:  Smith
+  - account_details:
         email:    law_firm_email_with_no_agents
         password: test
-      details:
+    details:
         type:     law_firm
         name:     Lonely Inc
-    - account_details:
+  - account_details:
         email:    mediation_centre_email
         password: test
-      details:
+    details:
         type:     mediation_centre
         name:     CompanyCo
-      individuals:
-        - account_details:
+    individuals:
+      - account_details:
             email:    mediator_email
             password: test
-          details:
+        details:
             type:     mediator
             forename: John
             surname:  Smith
+disputes:
+  - title:      Smith versus Jones
+    type:       other
+    law_firm_a: law_firm_email
+    agent_a:    agent_email
