--- a/data/fixtures/fixture_data.yml
+++ b/data/fixtures/fixture_data.yml
@@ -73,6 +73,36 @@ disputes:
     type:       other
     law_firm_a: law_firm_a@t.co
     agent_a:    agent_a@t.co
+  - title:      The one dispute
+    type:       other
+    law_firm_a: law_firm_with_only_one_dispute@company.com
+    agent_a:    one_dispute_agent@company.com
+  - title:      A fully assigned dispute with no lifespan
+    type:       other
+    law_firm_a: law_firm_a@t.co
+    law_firm_b: law_firm_b@t.co
+    agent_a:    agent_a@t.co
+    agent_b:    agent_b@t.co
+    summary_a:  Here is a summary for party A.
+    summary_b:  Here is a summary for party B.
+  - title:      A dispute with a proposed lifespan
+    type:       other
+    law_firm_a: law_firm_a@t.co
+    law_firm_b: law_firm_b@t.co
+    agent_a:    agent_a@t.co
+    agent_b:    agent_b@t.co
+    summary_a:  Here is a summary for party A.
+    summary_b:  Here is a summary for party B.
+    lifespan:   offered
+  - title:      A dispute that has ended
+    type:       other
+    law_firm_a: law_firm_a@t.co
+    law_firm_b: law_firm_b@t.co
+    agent_a:    agent_a@t.co
+    agent_b:    agent_b@t.co
+    summary_a:  Here is a summary for party A.
+    summary_b:  Here is a summary for party B.
+    lifespan:   ended
   - title:      Smith versus Jones
     type:       other
     law_firm_a: law_firm_a@t.co
@@ -87,7 +117,4 @@ disputes:
                     It is our belief that Jones was operating their vessel in accordance with
                     all regulations and that the damage done to Smith's vessel was an act of
                     God. Our client should not have to pay the claimant any damages.
-  - title:      The one dispute
-    type:       other
-    law_firm_a: law_firm_with_only_one_dispute@company.com
-    agent_a:    one_dispute_agent@company.com
+    lifespan:   accepted
