--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/yaml":    "2.6.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.5.*"
+        "phpunit/phpunit":             "4.5.*",
+        "phpdocumentor/phpdocumentor": "2.*"
     },
     "config": {
         "vendor-dir": "vendor"
