added unit test for Evidence

--- a/data/fixtures/fixture_data.yml
+++ b/data/fixtures/fixture_data.yml
@@ -132,3 +132,4 @@ disputes:
                     all regulations and that the damage done to Smith's vessel was an act of
                     God. Our client should not have to pay the claimant any damages.
     lifespan:   accepted
+    evidence:   one_item
