--- a/data/fixtures/fixture_data.yml
+++ b/data/fixtures/fixture_data.yml
@@ -68,6 +68,7 @@ organisations:
             type:     mediator
             forename: John
             surname:  Smith
+            cv:       "#CV coming soon."
 disputes:
   - title:      A simple test dispute
     type:       other
@@ -117,6 +118,16 @@ disputes:
     summary_a:  Here is a summary for party A.
     summary_b:  Here is a summary for party B.
     lifespan:   ended
+  - title:      Dispute that is in mediation
+    type:       other
+    law_firm_a: law_firm_a@t.co
+    law_firm_b: law_firm_b@t.co
+    agent_a:    agent_a@t.co
+    agent_b:    agent_b@t.co
+    summary_a:  Summary goes here.
+    summary_b:  We're too good to have a summary.
+    lifespan:   accepted
+    evidence:   one_item
   - title:      Smith versus Jones
     type:       other
     law_firm_a: law_firm_a@t.co
