--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "license": "GPL-3.0",
     "require": {
         "php":             ">=5.3.6",
-        "bcosca/fatfree":  "3.4.0",
-        "symfony/yaml":    "2.6.4"
+        "bcosca/fatfree":  "3.4.*",
+        "symfony/yaml":    "2.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.5.*"
+        "phpunit/phpunit": "4.6.*"
     },
     "config": {
         "vendor-dir": "vendor"
